automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
   }
 }
 
-
+document.addEventListener('keydown', function(e) {
+  if (e.which === 37) {
+    moveDodgerLeft()
+  }
+})
     </script>
   </body>
 </html>
